2008-08-22  Vadim Kurland  <vadim@vk.crocodile.org>

	* RuleSetView.cpp (RuleSetView::keyPressEvent): fixed bug (no #):
	while navigating between rule elements using keyboard, it was not
	possible to reach the very last rule if ruleset contained rule
	groups

	* ipt.cpp (main): additional fix for the bug #2051629 "group with
	dns names are handled as empty": Compiler should check if any
	rules of given address family exists before running
	preprocessor. This is to prevent it from trying to resolve DNSName
	objects for IPv6 when there are no ipv6 rules.

2008-08-21  Vadim Kurland  <vadim@vk.crocodile.org>

	* ProjectPanel_file_ops.cpp (ProjectPanel::load): truncating very
	long error messages that happen when GUI tries to load broken .fwb
	file. These error messages contain complete output of the XML
	parser which can be very long and does not fit in the normal error
	dialog. Message will be cut off at 1000 characters, which is
	enough to see the topmost part of the parser output.

2008-08-20  vadim  <vadim@vk.crocodile.org>

	* ObjectTreeView.cpp (ObjectTreeView::ObjectTreeView): Fixed GUI
	crash on Ubuntu Hardy that happened b/c of a bug in QT
	4.3.4. Crash happened when user added second object to any branch
	of the tree. When second object was added to the tree, the program
	terminated with assertion "ASSERT: "left.level > right.level" in
	file itemviews/qtreeview.cpp". This did not happen with QT 4.4.1
	and 4.3.2 (could not test with 4.3.5). The fix was to disable
	sorting in the QTreeView widget used to represent object tree.

2008-08-19  Vadim Kurland  <vadim@vk.crocodile.org>

	* NATCompiler_PrintRule.cpp (PrintRule::_printSrcService): fixed
	bug (no #): policy compielr for iptables used multiport module
	option "--destination-port" instead of "--dports" when version was
	set to 1.4.0. Option "--destination-port" is only for very old
	versions of iptables (<1.2.6). This change makes compiler properly